FDS-145. Another stab at the "i" alignment issue.

--- a/src/components/organisms/horizontal-image-slider/_horizontal-image-slider.scss
+++ b/src/components/organisms/horizontal-image-slider/_horizontal-image-slider.scss
@@ -95,17 +95,6 @@ Styleguide COMPONENTS.horizontal-image-slider
         display: inline-block;
       }
     }
-
-    .toggle-caption {
-      .i-info {
-        font-size: 14px;
-        line-height: 0;
-        top: 8px;
-        left: 5px;
-        font-weight: 700;
-        font-family: 'freight-text-pro';
-      }
-    }
   }
 
   .owl-dots {
